// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`BpkPriceMarker should render correctly with "status" attribute as "previous_selected" 1`] = `
<DocumentFragment>
  <div>
    <div
      class="mock-overlay-view"
    />
    <button
      class="bpk-price-marker-button__wrapper"
      type="button"
    >
      <div
        class="bpk-price-marker-button bpk-price-marker-button-previous_selected"
      >
        <span
          class="bpk-text bpk-text--label-3"
          data-backpack-ds-component="Text"
        >
          £120
        </span>
      </div>
    </button>
  </div>
</DocumentFragment>
`;

exports[`BpkPriceMarker should render correctly with "status" attribute as "selected" 1`] = `
<DocumentFragment>
  <div>
    <div
      class="mock-overlay-view"
    />
    <button
      class="bpk-price-marker-button__wrapper"
      type="button"
    >
      <div
        class="bpk-price-marker-button bpk-price-marker-button-selected"
      >
        <span
          class="bpk-text bpk-text--label-3"
          data-backpack-ds-component="Text"
        >
          £120
        </span>
      </div>
    </button>
  </div>
</DocumentFragment>
`;

exports[`BpkPriceMarker should render correctly with a "buttonProps" attribute 1`] = `
<DocumentFragment>
  <div>
    <div
      class="mock-overlay-view"
    />
    <button
      class="bpk-price-marker-button__wrapper"
      testid="arbitrary value"
      type="button"
    >
      <div
        class="bpk-price-marker-button bpk-price-marker-button-unselected"
      >
        <span
          class="bpk-text bpk-text--label-3"
          data-backpack-ds-component="Text"
        >
          £120
        </span>
      </div>
    </button>
  </div>
</DocumentFragment>
`;

exports[`BpkPriceMarker should render correctly with a "className" attribute 1`] = `
<DocumentFragment>
  <div>
    <div
      class="mock-overlay-view"
    />
    <button
      class="bpk-price-marker-button__wrapper"
      type="button"
    >
      <div
        class="bpk-price-marker-button bpk-price-marker-button-unselected custom-class-1 custom-class-2"
      >
        <span
          class="bpk-text bpk-text--label-3"
          data-backpack-ds-component="Text"
        >
          £120
        </span>
      </div>
    </button>
  </div>
</DocumentFragment>
`;

exports[`BpkPriceMarker should render correctly with a "onClick" attribute 1`] = `
<DocumentFragment>
  <div>
    <div
      class="mock-overlay-view"
    />
    <button
      class="bpk-price-marker-button__wrapper"
      type="button"
    >
      <div
        class="bpk-price-marker-button bpk-price-marker-button--dynamic bpk-price-marker-button-unselected"
      >
        <span
          class="bpk-text bpk-text--label-3"
          data-backpack-ds-component="Text"
        >
          £120
        </span>
      </div>
    </button>
  </div>
</DocumentFragment>
`;

exports[`BpkPriceMarker should render properly 1`] = `
<DocumentFragment>
  <div>
    <div
      class="mock-overlay-view"
    />
    <button
      class="bpk-price-marker-button__wrapper"
      type="button"
    >
      <div
        class="bpk-price-marker-button bpk-price-marker-button-unselected"
      >
        <span
          class="bpk-text bpk-text--label-3"
          data-backpack-ds-component="Text"
        >
          £120
        </span>
      </div>
    </button>
  </div>
</DocumentFragment>
`;

exports[`BpkPriceMarker should render properly with a icon 1`] = `
<DocumentFragment>
  <div>
    <div
      class="mock-overlay-view"
    />
    <button
      class="bpk-price-marker-button__wrapper"
      type="button"
    >
      <div
        class="bpk-price-marker-button bpk-price-marker-button-unselected bpk-price-marker-button-unselected--icon"
      >
        <span>
          Icon
        </span>
        <span
          class="bpk-text bpk-text--label-3"
          data-backpack-ds-component="Text"
        >
          £120
        </span>
      </div>
    </button>
  </div>
</DocumentFragment>
`;
